@@ -290,8 +290,11 @@
 
       \item \code{print.aov()} missed column names in the multivariate case
       due to misspelling (reported by Chris Andrews).
-D
-      ()
+
+      \item The tools-internal function called from \command{R CMD
+	INSTALL} now gets a \code{warnOption = 1} argument and only sets
+	\code{options(warn = warnOption)} when that increases the
+	warning level (\PR{17453}).
     }
   }
 }
